WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293122
[WPE] Fix build with -Werror=free-nonheap-object
https://bugs.webkit.org/show_bug.cgi?id=293122
Summary
[WPE] Fix build with -Werror=free-nonheap-object
Simon Pena
Reported
2025-05-16 08:39:00 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Pena
Comment 1
2025-05-16 08:43:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45490
EWS
Comment 2
2025-05-21 07:04:28 PDT
Committed
295202@main
(4ffe073bf249): <
https://commits.webkit.org/295202@main
> Reviewed commits have been landed. Closing PR #45490 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug