[WPE] Fix build with -Werror=free-nonheap-object https://bugs.webkit.org/show_bug.cgi?id=293122

Reviewed by Philippe Normand and Wenson Hsieh.

Move the WebTouchEvent virtual destructor to the base class to fix a WPE
build error on debug configuration with -Werror=free-nonheap-object.

* Source/WebKit/Shared/WebEvent.h: added default virtual destructor.
* Source/WebKit/Shared/WebTouchEvent.h:
(WebKit::WebTouchEvent::~WebTouchEvent): Deleted.

Canonical link: https://commits.webkit.org/295202@main